# pavucontrol-qt

./: .gitattributes  .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile.am  README.md  autogen.sh  bootstrap.sh  configure.ac  pavucontrol-qt.ts  pavucontrol-qt_as.ts  pavucontrol-qt_bn_IN.ts  pavucontrol-qt_ca.ts  pavucontrol-qt_cs.ts  pavucontrol-qt_da.ts  pavucontrol-qt_de.ts  pavucontrol-qt_el.ts  pavucontrol-qt_es.ts  pavucontrol-qt_fi.ts  pavucontrol-qt_fr.ts  pavucontrol-qt_gu.ts  pavucontrol-qt_hi.ts  pavucontrol-qt_hu.ts  pavucontrol-qt_id.ts  pavucontrol-qt_it.ts  pavucontrol-qt_ja.ts  pavucontrol-qt_kn.ts  pavucontrol-qt_lt.ts  pavucontrol-qt_ml.ts  pavucontrol-qt_mr.ts  pavucontrol-qt_nl.ts  pavucontrol-qt_or.ts  pavucontrol-qt_pa.ts  pavucontrol-qt_pl.ts  pavucontrol-qt_pt.ts  pavucontrol-qt_pt_BR.ts  pavucontrol-qt_ru.ts  pavucontrol-qt_sk.ts  pavucontrol-qt_sr.ts  (+8 more)
.github/: ISSUE_TEMPLATE.md
doc/: Makefile.am  README.html.in  style.css
m4/: .gitignore
po/: .gitignore  LINGUAS  POTFILES.in  TRANSLATORS_README.txt  as.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gu.po  hi.po  hu.po  it.po  ja.po  kn.po  ko.po  ml.po  mr.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  th.po  tr.po  uk.po  zh_CN.po
src/: .gitignore  CMakeLists.txt  Makefile.am  cardwidget.cc  cardwidget.h  cardwidget.ui  channel.cc  channel.h  channelwidget.cc  channelwidget.h  devicewidget.cc  devicewidget.h  devicewidget.ui  i18n.h  mainwindow.cc  mainwindow.h  mainwindow.ui  minimalstreamwidget.cc  minimalstreamwidget.h  pavucontrol-qt.desktop.in  pavucontrol.cc  pavucontrol.desktop  pavucontrol.desktop.in  pavucontrol.glade  pavucontrol.h  qtpamainloop.h  rolewidget.cc  rolewidget.h  sinkinputwidget.cc  sinkinputwidget.h  sinkwidget.cc  sinkwidget.h  sourceoutputwidget.cc  sourceoutputwidget.h  sourcewidget.cc  sourcewidget.h  streamwidget.cc  streamwidget.h  streamwidget.ui  systray.cc  (+5 more)
src/translations/: convert.sh  pavucontrol-qt.desktop.yaml  pavucontrol-qt.ts  pavucontrol-qt_ar.desktop.yaml  pavucontrol-qt_ar.ts  pavucontrol-qt_arn.ts  pavucontrol-qt_as.ts  pavucontrol-qt_ast.ts  pavucontrol-qt_bg.desktop.yaml  pavucontrol-qt_bg.ts  pavucontrol-qt_bn_IN.ts  pavucontrol-qt_ca.desktop.yaml  pavucontrol-qt_ca.ts  pavucontrol-qt_cs.desktop.yaml  pavucontrol-qt_cs.ts  pavucontrol-qt_cy.ts  pavucontrol-qt_da.desktop.yaml  pavucontrol-qt_da.ts  pavucontrol-qt_de.desktop.yaml  pavucontrol-qt_de.ts  pavucontrol-qt_el.desktop.yaml  pavucontrol-qt_el.ts  pavucontrol-qt_en_GB.ts  pavucontrol-qt_es.desktop.yaml  pavucontrol-qt_es.ts  pavucontrol-qt_et.desktop.yaml  pavucontrol-qt_et.ts  pavucontrol-qt_fi.desktop.yaml  pavucontrol-qt_fi.ts  pavucontrol-qt_fr.desktop.yaml  pavucontrol-qt_fr.ts  pavucontrol-qt_gl.desktop.yaml  pavucontrol-qt_gl.ts  pavucontrol-qt_gu.ts  pavucontrol-qt_he.desktop.yaml  pavucontrol-qt_he.ts  pavucontrol-qt_hi.desktop.yaml  pavucontrol-qt_hi.ts  pavucontrol-qt_hr.desktop.yaml  pavucontrol-qt_hr.ts  (+60 more)
